--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
+spring.datasource.username=dbq
+spring.datasource.password=dbq123
+spring.datasource.driver-class-name = com.mysql.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL55Dialect
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database=MYSQL
+spring.jpa.show-sql=false
 
+server.tomcat.max-connections=3000
+server.tomcat.max-threads=2000
+
+server.port=9102
+spring.datasource.url= jdbc:mysql://localhost:3306/databanq_db?useUnicode=yes&characterEncoding=UTF-8
