--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.username=dbq
-spring.datasource.password=dbq123
+spring.datasource.username=USER
+spring.datasource.password=PASSWORD
 spring.datasource.driver-class-name = com.mysql.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL55Dialect
 spring.jpa.generate-ddl=true
@@ -10,5 +10,5 @@ spring.jpa.show-sql=false
 server.tomcat.max-connections=3000
 server.tomcat.max-threads=2000
 
-server.port=9102
-spring.datasource.url= jdbc:mysql://localhost:3306/databanq_db?useUnicode=yes&characterEncoding=UTF-8
+server.port=8080
+spring.datasource.url= jdbc:mysql://localhost:3306/DB_NAME?useUnicode=yes&characterEncoding=UTF-8
